--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ LazyData: true
 Imports: 
     tfse
 RoxygenNote: 6.1.0
+URL: https://github.com/mkearney/rmdees
+BugReports: https://github.com/mkearney/rmdees/issues
